<resources>
    <string name="app_name">Guess The Number</string>
    <string name="btn_start">Start Game</string>
    <string name="btn_results">Results</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>
    <string name="results_name">Results Activity</string>
    <string name="image_name">Image</string>
    <string name="about_info">Program was created by Rokas Janonis IFAi-7</string>
    <string name="player_name">Player name</string>
    <string name="player_age">Player age</string>
    <string name="player_a">Difficulty level</string>
    <string name="sound_name">Sound</string>
    <string-array name="difficulty_values">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Impossible</item>
    </string-array>
    <string name="play_btn">Play</string>
    <string name="number_range_format">Guess a number in range %d to %d</string>
    <string name="turns_format">Turn %d of %d</string>
    <string name="result_format">Guessed number was %d and it was too %s.</string>
    <string name="result_high">high</string>
    <string name="result_low">low</string>
    <string name="answer_winlose">The correct number was %d</string>
    <string name="answer_numberoftries_format">You guessed right at turn %d</string>
    <string name="outofturns">You did not get it right in %d attempts</string>
    <string name="aboutHow">How to play?</string>
    <string name="howtoplay">Guess the secret number in specified range within the specified number of turns. If your guess is too high or too low, you will get a hint.</string>
    <string name="settings_save">Your information has been saved!</string>
</resources>
